# chat-app

./: .env.example  .gitignore  pyproject.toml
src/: main.py  settings.py
src/db/: database.py
src/models/: chat.py  user.py
src/schemas/: chat.py  user.py
src/services/: auth_service.py
