[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["Kla1mzZz <kla1mzz16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
jwt = "^1.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
